--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <meta charset="utf-8">
 
-<title>spice</title>
+<title>muah 💕</title>
 
 <meta name="viewport" content="width=device-width">
 <meta name="theme-color" content="hotpink">
@@ -10,7 +10,14 @@
 <meta name="description" content="hella hotpink">
 
 <link rel="stylesheet" href="spice.css" media=(color)>
+<link rel="stylesheet" href="space.css" media="all">
 
-<h1 hidden>
-  spice 💕
+<h1>
+  <a href="https://webmural.com/dialon"><em>muah</em></a>
 </h1>
+
+<pre>
+mwah
+mwwah
+mwwwah
+</pre>
